--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: sliding_button
+name: sliding_widget
 description: A sliding Flutter widget, which helps to start an event based on user interaction. Highly customizable and flexible.
 version: 0.0.1
 repository: https://github.com/cooltechie-info/sliding-button
